# lsearch

./: Cargo.toml  README.md
src/: c1.txt  c2.txt  c3.txt  cli.rs  cli.yaml  lib.rs  main.rs  search.rs
