[package]
name = "lsearch"
version = "0.1.0"
authors = ["Alerik <justalerik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
walkdir = "2"
colour = "0.5.0"
