[package]
name = "lsearch"
version = "0.1.0"
authors = ["Jackson C. <jackson.codispoti@uky.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
walkdir = "2"
colour = "0.5.0"
bit_field = "0.9.0"
chrono = "0.4.19"
users = "0.11.0"
